# mcporter-bridge

./: LICENSE  README.md  pyproject.toml  run-http.sh  run-server.sh
.github/workflows/: publish.yml
examples/: cline.mcp.json  codex.config.toml  cursor.mcp.json
src/mcporter_bridge/: __main__.py  client_templates.py  config_cli.py  server.py
tests/: test_client_templates.py  test_server.py
